tests/errors/invalid_enum_cast.dang
enum Status { PASSED FAILED }

# Explicit enum casts are checked at runtime.
let bad = "NOPE" :: Status!
